# FaceitAnalyserApp

./: .gitignore  CMakeLists.txt  README.md  faceitapiclient.cpp  faceitapiclient.h  machine.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  matchdatapanel.cpp  matchdatapanel.h  matchdatapanel.ui  matchinputpanel.cpp  matchinputpanel.h  matchinputpanel.ui  matchstatswidget.cpp  matchstatswidget.h  matchstatswidget.ui  player.cpp  player.h  playerdatapanel.cpp  playerdatapanel.h  playerdatapanel.ui  playerinputpanel.cpp  playerinputpanel.h  playerinputpanel.ui  playerstatsmanager.cpp  playerstatsmanager.h  playerstatsmanager.ui  playerstatswidget.cpp  playerstatswidget.h  playerstatswidget.ui  playerstatswindow.cpp  playerstatswindow.h  playerstatswindow.ui  resources.qrc
include/: faceitapiclient.h  mainwindow.h  matchdatapanel.h  matchinputpanel.h  player.h  playerstatswidget.h
resources/: maps.json
src/: faceitapiclient.cpp  matchinputpanel.cpp  player.cpp  playerdatapanel.cpp  playerstatsmanager.cpp  playerstatswidget.cpp
ui/: matchdatapanel.ui  matchinputpanel.ui  playerdatapanel.ui
